[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loenn-mcp"
version = "2.1.0"
description = "Celeste map editor for AI agents — MCP server for reading, editing, and previewing .bin map files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Maggy Studio" }]
keywords = ["celeste", "loenn", "mcp", "model-context-protocol", "game-modding", "everest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "pygame>=2.6.1",
    "pytmx>=3.32",
]

[project.urls]
Homepage = "https://github.com/Maggy-Studio/loenn-mcp"
Repository = "https://github.com/Maggy-Studio/loenn-mcp"
Issues = "https://github.com/Maggy-Studio/loenn-mcp/issues"

[project.scripts]
loenn-mcp = "loenn_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["loenn_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "loenn_mcp/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
